[project]
name = "wordle-hints"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
]


[project.scripts]
wordle-hints = "wordle_hints.main:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
]

[tool.uv]
package = true

[tool.flake8]
extend-ignore = ["E501"]
